[package]
name = "bakoel-superadmin"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework Tercepat
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# Manipulasi JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Koneksi ke TiDB
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono"] }

# Keamanan (CORS) & Waktu
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }